[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/Battle/PreBattle/SingleCharacterView.gd" type="Script" id=1]

[node name="SingleCharacterView" type="Panel"]
margin_right = 1023.0
margin_bottom = 469.0
script = ExtResource( 1 )

[node name="Fields" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -183.5
margin_right = 205.5
margin_bottom = 110.5

[node name="characterName" type="HBoxContainer" parent="Fields"]
margin_right = 389.0
margin_bottom = 14.0

[node name="FieldName" type="Label" parent="Fields/characterName"]
margin_right = 77.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"

[node name="FieldValue" type="Label" parent="Fields/characterName"]
margin_left = 81.0
margin_right = 389.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="max_hp" type="HBoxContainer" parent="Fields"]
margin_top = 18.0
margin_right = 389.0
margin_bottom = 32.0

[node name="FieldName" type="Label" parent="Fields/max_hp"]
margin_right = 77.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "HP"

[node name="FieldValue" type="Label" parent="Fields/max_hp"]
margin_left = 81.0
margin_right = 389.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="max_mp" type="HBoxContainer" parent="Fields"]
margin_top = 36.0
margin_right = 389.0
margin_bottom = 50.0

[node name="FieldName" type="Label" parent="Fields/max_mp"]
margin_right = 77.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "MP"

[node name="FieldValue" type="Label" parent="Fields/max_mp"]
margin_left = 81.0
margin_right = 389.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="damage" type="HBoxContainer" parent="Fields"]
margin_top = 54.0
margin_right = 389.0
margin_bottom = 68.0

[node name="FieldName" type="Label" parent="Fields/damage"]
margin_right = 77.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Damage"

[node name="FieldValue" type="Label" parent="Fields/damage"]
margin_left = 81.0
margin_right = 389.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="speed" type="HBoxContainer" parent="Fields"]
margin_top = 72.0
margin_right = 389.0
margin_bottom = 86.0

[node name="FieldName" type="Label" parent="Fields/speed"]
margin_right = 77.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Speed"

[node name="FieldValue" type="Label" parent="Fields/speed"]
margin_left = 81.0
margin_right = 389.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="point_cost" type="MarginContainer" parent="."]
margin_left = 328.0
margin_top = 376.0
margin_right = 409.0
margin_bottom = 444.0

[node name="FieldValue" type="Label" parent="point_cost"]
margin_right = 81.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -25.0
margin_right = -6.0
margin_bottom = -5.0
text = "Right"

[node name="Left" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -25.0
margin_right = 44.0
margin_bottom = -5.0
text = "Left"

[node name="Select" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.5
margin_top = -25.0
margin_right = 24.5
margin_bottom = -5.0
text = "Select"

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
